<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultipleChoices"
    android:layout_margin="25dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="35dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/timerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_time"
                android:textSize="25dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <TextView
                    android:id="@+id/timerB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_time"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/button_timerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onToggleButton"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <ToggleButton
                    android:id="@+id/button_timerB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onToggleButton"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_question"
                android:layout_marginVertical="20dp"
                android:textSize="20dp"
                />

            <CheckBox
                android:id="@+id/checkbox_jerboa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jerboa" />

            <CheckBox
                android:id="@+id/checkbox_lion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lion" />

            <CheckBox
                android:id="@+id/checkbox_boomslang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boomslang" />

            <CheckBox
                android:id="@+id/checkbox_elephant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Elephant" />

            <CheckBox
                android:id="@+id/checkbox_rhino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rhino" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_question_2"
                android:layout_marginVertical="20dp"
                android:textSize="20dp"
                />

            <CheckBox
                android:id="@+id/checkbox_dragon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dragon" />

            <CheckBox
                android:id="@+id/checkbox_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dog" />

            <CheckBox
                android:id="@+id/checkbox_pig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pig" />

            <CheckBox
                android:id="@+id/checkbox_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cat" />

            <CheckBox
                android:id="@+id/checkbox_bird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bird" />
        </LinearLayout>

        <Button
            android:id="@+id/q2_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="onClickSubmit"
            android:visibility="visible"
            />
        <ImageButton
            android:id="@+id/q2_submit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/submit"
            android:layout_gravity="center"
            android:onClick="onClickSubmit"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/attempts_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attempt_lefts"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            />




    </LinearLayout>

</ScrollView>