<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_toggle_function"
            android:textSize="20dp"
            android:layout_marginBottom="12dp"
            />
        <RadioGroup
            android:id="@+id/toggle_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <RadioButton
                    android:id="@+id/toggle_function_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_function_1"
                    android:layout_gravity="center"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/toggle_function_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/toggle_function_2"/>
                <RadioButton
                    android:id="@+id/toggle_function_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/toggle_function_3"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="12dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time_limit"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/time_limit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:gravity="bottom|center"
            android:textSize="20dp"
            android:inputType="number"
            android:maxLength="5"
            android:hint="10000"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_button_style"
            android:layout_marginBottom="15dp"
            android:textSize="20dp"
            />
        <Switch
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="10dp"
        android:layout_gravity="center"
        android:onClick="onClickSubmit"
        android:layout_marginTop="30dp"
        />
</LinearLayout>