<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/timerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_time"
            android:layout_marginTop="15dp"
            android:textSize="25dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/timerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_time"
                android:layout_marginTop="15dp"
                android:textSize="25dp"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/button_timerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:checked="true"
            android:onClick="onToggleButton"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >
            <ToggleButton
                android:id="@+id/button_timerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:checked="true"
                android:onClick="onToggleButton"
                />
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:textSize="20dp"
            />


        <EditText
            android:id="@+id/inputAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            />
        <Button
            android:id="@+id/q1_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="onClickSubmit"
            android:visibility="visible"
            />
        <ImageButton
            android:id="@+id/q1_submit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/submit"
            android:layout_gravity="center"
            android:onClick="onClickSubmit"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/attempts_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attempt_lefts"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            />


</LinearLayout>